--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pdm-blood-donation-website",
   "version": "1.0.0",
-  "description": "Project PDM",
+  "description": "Web Project",
   "main": "app.js",
   "scripts": {
     "start": "nodemon  --inspect src/index.js",
@@ -13,7 +13,7 @@
   },
   "keywords": [
     "nodejs",
-    "PDM",
+    "Web",
     "Iu"
   ],
   "author": "Group 4 - Topic 6",
