--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.18.1",
+    "express-ejs-layouts": "^2.5.1",
     "nodemon": "^2.0.12"
   }
 }
