--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ PORT = 5000
 
 HOST = 'localhost'
 USER = 'root'
-PASSWORD = '12345'
-DATABASE = 'test'
+PASSWORD = 'helloWorld2001'
+DATABASE = 'webproject'
