--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
     "@babel/preset-env": "^7.15.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.6",
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
     "mysql2": "^2.3.3",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
