--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.3",
+    "googleapis": "^63.0.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.4.11",
     "nodemon": "^2.0.12",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
