--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ PORT = 3000
 HOST ='localhost'
 USER = 'root'
 PASSWORD = '12345'
-DATABASE = 'test'
+DATABASE = 'WebProject'
 
 # HOST_mail = 'smtp.gmail.com'
 # USER = 'aidoctor.se@gmail.com'
