--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ PORT = 3000
 
 HOST ='localhost'
 USER = 'root'
-PASSWORD = '12345'
-DATABASE = 'test'
+PASSWORD = 'helloWord2001'
+DATABASE = 'webproject'
 
 # HOST_mail = 'smtp.gmail.com'
 # USER = 'aidoctor.se@gmail.com'
